--- a/templates/sequelize-typescript/model.ejs
+++ b/templates/sequelize-typescript/model.ejs
@@ -43,8 +43,8 @@ import {
     <% [...columns.values()].forEach(({ name, tsType, definition: { defaultValue, allowNull, autoIncrement, primaryKey, comment, type, field }}, i, arr) => { -%>
     <% if (defaultValue) { -%>
     <% this.seqImports.add("Default") -%>
-    <% if (defaultValue.startsWith("fn")) { this.seqImports.add("fn") } -%>
-    <% if (defaultValue.startsWith("literal")) { this.seqImports.add("literal") } -%>
+    <% if (typeof defaultValue === "string" && defaultValue.startsWith("fn")) { this.seqImports.add("fn") } -%>
+    <% if (typeof defaultValue === "string" && defaultValue.startsWith("literal")) { this.seqImports.add("literal") } -%>
     @Default(<%- defaultValue %>)
     <% } -%>
     <% if (comment) { -%>
