--- a/templates/@sequelize/core/init-models.ejs
+++ b/templates/@sequelize/core/init-models.ejs
@@ -1,22 +1,1 @@
-/* auto-generated imports */
-<% allTables.forEach(({ fileName, modelName }) => { -%>
-import { <%= modelName %> } from './<%= fileName %>';
-<% }) -%>
-/* auto-generated imports */
-import { Sequelize } from "@sequelize/core";
-
-export default function initModels(sequelize: Sequelize) {
-sequelize.addModels([
-/* auto-generated inits */
-<% allTables.forEach(({ modelName }) => { -%>
-<%= modelName %>,
-<% }) -%>
-/* auto-generated inits */
-]);
-}
-
-/* auto-generated exports */
-<% allTables.forEach(({ fileName }) => { -%>
-export * from './<%= fileName %>';
-<% }) -%>
-/* auto-generated exports */
+<%- include("../../partials/decorators-init.ejs", { allTables, joinTableAliases, targetLib: "@sequelize/core" }) -%>
