removed extra obj

--- a/templates/@sequelize/core/init-models.ejs
+++ b/templates/@sequelize/core/init-models.ejs
@@ -1,1 +1,1 @@
-<%- include("../../partials/decorators-init.ejs", { allTables, joinTableAliases, targetLib: "@sequelize/core" }) -%>
+<%- include("../../partials/decorators-init.ejs", { allTables, targetLib: "@sequelize/core" }) -%>
