--- a/templates/sequelize-typescript/init-models.ejs
+++ b/templates/sequelize-typescript/init-models.ejs
@@ -1,1 +1,1 @@
-<%- include("../partials/decorators-init.ejs", { allTables, joinTableAliases, targetLib: "sequelize-typescript" }) -%>
+<%- include("../partials/decorators-init.ejs", { allTables, targetLib: "sequelize-typescript" }) -%>
