--- a/templates/@sequelize/core/model.ejs
+++ b/templates/@sequelize/core/model.ejs
@@ -15,7 +15,7 @@ import {
     export type <%- modelName %>Attributes = Pick<%- "<" %><%- modelName %>, <%- modelName %>AttributeKeys>;
     export type <%- modelName %>OptionalAttributes =
     /* auto-generated optional attributes */
-    <%- include("../../partials/keys.ejs", { keys: [...columns.values()].filter(c => !c.definition.allowNull && (c.definition.defaultValue || c.definition.autoIncrement)).map(c => c.name) }) -%>
+    <%- include("../../partials/keys.ejs", { keys: [...columns.values()].filter(c => !c.definition.allowNull && ((c.definition.defaultValue !== undefined && c.definition.defaultValue !== null) || c.definition.autoIncrement)).map(c => c.name) }) -%>
     /* auto-generated optional attributes */
     export type <%- modelName %>CreationAttributes = Omit<%- "<" %><%- modelName %>Attributes, <%- modelName %>OptionalAttributes> & Partial<%- "<" %>Pick<%- "<" %><%- modelName %>Attributes, <%- modelName %>OptionalAttributes>>;
     @Table({
