--- a/templates/partials/decorators-init.ejs
+++ b/templates/partials/decorators-init.ejs
@@ -1,25 +1,25 @@
-/* auto-generated imports */
+/* start auto-generated imports */
 <% allTables.forEach(({ fileName, modelName }) => { -%>
 import { <%= modelName %> } from './<%= fileName %>';
 <% }) -%>
-/* auto-generated imports */
+/* end auto-generated imports */
 import { Sequelize } from "<%- targetLib %>";
 
 export default function initModels(sequelize: Sequelize) {
-/* auto-generated join-table-aliases */
+/* start auto-generated join-table-aliases */
 <%- include('../partials/join-table-aliases.ejs', { allTables }) -%>
-/* auto-generated join-table-aliases */
+/* end auto-generated join-table-aliases */
 sequelize.addModels([
-/* auto-generated inits */
+/* start auto-generated inits */
 <% allTables.forEach(({ modelName }) => { -%>
 <%= modelName %>,
 <% }) -%>
-/* auto-generated inits */
+/* end auto-generated inits */
 ]);
 }
 
-/* auto-generated exports */
+/* start auto-generated exports */
 <% allTables.forEach(({ fileName }) => { -%>
 export * from './<%= fileName %>';
 <% }) -%>
-/* auto-generated exports */
+/* end auto-generated exports */
