Add .js for esm support

--- a/templates/partials/imports.ejs
+++ b/templates/partials/imports.ejs
@@ -1,5 +1,5 @@
 <% for( const [file, properties] of imports.entries() ) {-%>
 import {
 <%- include(this.dirName + '/import-props.ejs', { properties: [...properties] }) -%>
-} from '<%= file %>';
+} from '<%= file %>.js';
 <% } -%>
