--- a/templates/partials/decorators-init.ejs
+++ b/templates/partials/decorators-init.ejs
@@ -1,6 +1,6 @@
 /* start auto-generated imports */
 <% allTables.forEach(({ fileName, modelName }) => { -%>
-import { <%= modelName %> } from './<%= fileName %>';
+import { <%= modelName %> } from './<%= fileName %>.js';
 <% }) -%>
 /* end auto-generated imports */
 import { Sequelize } from "<%- targetLib %>";
@@ -20,6 +20,6 @@ sequelize.addModels([
 
 /* start auto-generated exports */
 <% allTables.forEach(({ fileName }) => { -%>
-export * from './<%= fileName %>';
+export * from './<%= fileName %>.js';
 <% }) -%>
 /* end auto-generated exports */
